--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "proxy": "http://localhost:5678",
   "dependencies": {
+    "@tippy.js/react": "^3.1.1",
     "express": "^4.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
